--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ The whole process of nature is an integrated process of immense complexity, and 
         <caption>Here is this dialog in the form of a table</caption>
         <tr>
             <th>Event</th>
-            <th><em><span class="good">Goood</span> or <span class="bad">Bad</span> ?</em></th>
+            <th><em><span class="good">Good</span> or <span class="bad">Bad</span> ?</em></th>
         </tr>
         <tr>
             <td>Lose a horse </td>
